<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ransac_py</name>
  <version>0.0.0</version>
  <description>ransac_py from https://qiita.com/zakutakumi/items/54da1252b7213c4afb70</description>
  <maintainer email="oswystk15662@keio.jp">osw</maintainer>
  <license>Apache-2.0</license>

  <depend>sick_scan_xd</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
